== Groups by itthinx - changelog.txt

= 3.3.1 =
* WordPress 6.7 compatible.

= 3.3.0 =
* WordPress 6.7 compatible.
* Revised information and presentation of the welcome and add-ons sections.
* Revised the information provided in the readme.txt.
* Added several instances of missing output escaping.
* Using generic translations based on language (and form) when available.
* Updated the translation template.
* Updated the included translations.
* Revised several instances of code doc format.
* Added a lock icon for distinction on the Groups column header.

= 3.2.1 =
* WordPress 6.6 compatible.
* Updates script dependencies for blocks.
* Fixes blocks not available (regression bug in 3.2.0).
* Unified store used by blocks, avoids duplicate definition and console warning.

= 3.2.0 =
* WordPress 6.6 compatible.
* Revised Welcome screen.
* The option to show groups in user profiles is now enabled by default.
* Revised legacy option information.
* Updated the translation template.
* Updated the included translations.
* Revised the plugin tags.
* Adjusted the read restriction box to better fit its elements into its container.

= 3.1.0 =
* WordPress 6.5 compatible.
* Code doc corrections and revisions.
* Implements cautionary filter adjustments to avoid potential circular dependencies.
* Added resilience in user capability checks which depend on core scripts load order.
* Added checks to assure the existence of a Groups_User class method to avoid potential errors on install or update.
* Fixed an issue where removing access restrictions in bulk did not work due to a regression bug introduced in version 3.0.0.

= 3.0.0 =
* WordPress 6.5 compatible.
* The Grand Refactoring, Episode I. Properties, Getters, Setters.
* Added getters and setters to OPM classes.
* Fixed an error that could occur in certain processing flows when wp_get_current_user() is not yet defined.
* Introduces own current user capability check class methods in Groups_User class for coherency.